Update Week 10 Homework - Daniel Lesh.ipynb
Removing personal file directories

--- a/Programming & Data Analysis in Python - OPIM 3223/Week 10 Homework - Daniel Lesh.ipynb
+++ b/Programming & Data Analysis in Python - OPIM 3223/Week 10 Homework - Daniel Lesh.ipynb
@@ -28,7 +28,7 @@
     "import csv\n",
     "\n",
     "# .csv file foler I set:\n",
-    "filename = '/Users/daniellesh/Desktop/OPIM 3223/Data/2010_Northridge_CA_Weather.csv'\n",
+    "filename = '-----'\n",
     "\n",
     "# Open file as 'f'\n",
     "with open(filename) as f:\n",
