--- a/Programming & Data Analysis in Python - OPIM 3223/Week 10 Homework - Daniel Lesh.ipynb
+++ b/Programming & Data Analysis in Python - OPIM 3223/Week 10 Homework - Daniel Lesh.ipynb
@@ -70,7 +70,7 @@
    "source": [
     "import csv\n",
     "\n",
-    "filename = '/Users/daniellesh/Desktop/OPIM 3223/Data/2010_Northridge_CA_Weather.csv'\n",
+    "filename = '-----'\n",
     "with open(filename) as f:\n",
     "    reader = csv.reader(f)\n",
     "    header_row = next(reader)\n",
@@ -119,7 +119,7 @@
     "\n",
     "import csv\n",
     "\n",
-    "filename = '/Users/daniellesh/Desktop/OPIM 3223/Data/2010_Northridge_CA_Weather.csv'\n",
+    "filename = '-----'\n",
     "with open(filename) as f:\n",
     "    reader = csv.reader(f)\n",
     "    header_row = next(reader)\n",
